@@ -31,7 +31,7 @@ resources:
     machine_type: n1-standard-8
     image_family: "schedmd-slurm-{major}-{minor}-{base}"
     image_name: "schedmd-slurm-{major}-{minor}-{base}-{tag}"
-    slurm_version: 21.08.8
+    slurm_version: 21.08.8-2
     libjwt_version: v1.13.1
     ompi_version: v4.1.x
     images:
